<resources>
    <string name="app_name">MyHealthAssistant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewpager_description">Slide View Pager</string>
    <string name="screen1">Yapay Zeka(Sohbet)</string>
    <string name="screen2">Beslenme Programları</string>
    <string name="screen3">Motivasyon Sayfası</string>
    <string name="screen4">Spor Programları</string>
    <string name="screen5">Eğitim ve Kurslar</string>
    <string name="screen1desc">Sağlık yolculuğunuzda size
        eşlik edecek en özel rehber, mobil uygulamamızın
        zeki chatbotu! Siz sorularınızı sormadan önce o cevaplarını bulmuş olacak. İhtiyacınız olan
        bilgiye hızlı ve güvenilir bir şekilde erişmenizi sağlayacak olan
        bu dost, sağlık deneyiminizi dönüştürecek! </string>
    <string name="screen2desc">Sağlıklı yemek tarifleriyle dolu sayfamız,
        beslenme alışkanlıklarınızı dönüştürmeye hazır. Yapay zeka entegreli
        kişiselleştirilmiş yemek planları ile sağlıklı yaşamı
        bir adım öne taşıyan bir rehber olarak hizmetinizdeyiz!</string>
    <string name="screen3desc">"Hayatınızı renklendiren etkinliklerden ilham veren hikayelere,
        motivasyon sayfamız her anınıza pozitif bir dokunuş sağlıyor.
        motivasyon takviminden günlük ilham alırken, hayatı kolaylaştıran
        ipuçlarıyla daha güçlü adımlar atmanız için buradayız!</string>
    <string name="screen4desc">Yaş ve hareket seviyesine uygun esnek egzersiz programlarının
        bulunduğu sayfamız, sağlıklı yaşam için sizin yanınızda. Uygulanacak gün sayısı ve
        yaşınıza göre özelleştirilmiş 10 hareketli egzersiz programı seçenekleriyle daha
        sağlıklı ve enerjik bir yaşam için adım atmaya hazır olun!</string>
    <string name="screen5desc">Her kategoride uzmanlar tarafından hazırlanmış video
        podcast ve e-kitaplarla dolu eğitim sayfamız, bilgiyi kolay erişilebilir kılıyor.
        Kişisel gelişiminiz için gereken kaynaklar burada sizi bekliyor!</string>
    <string name="startDesc"> Yaşamınızı dönüştürecek, sağlık, motivasyon, egzersiz
        ve eğitim gibi her alanı kucaklayan kapsamlı bir rehber olarak bizim uygulamamız
        her adımda yanınızda. Zengin içeriği ve kullanıcı dostu arayüzüyle herkesin
        sağlık ve mutluluk yolculuğuna eşlik ediyoruz. Hayatınıza sağlık, neşe ve başarı
        getiren bir deneyim için haydi başlayın!</string>
    <string name="sss1"> Uygulamanızı nasıl indirebilirim?</string>
    <string name="sss2"> Üyelik nasıl alabilirim?</string>
    <string name="sss3"> Şifremi unuttum, ne yapmalıyım?</string>
    <string name="sss4"> Şifremi unuttum, ne yapmalıyım?</string>
    <string name="sss5"> Uygulamanızda hangi ödeme yöntemleri geçerlidir?</string>
    <string name="sss6"> Sıkça karşılaşılan teknik sorunlar için ne yapmalıyım?</string>
    <string name="sss11">Uygulamamızı indirmek için App Store veya Google Play Store a gidin ve arama çubuğuna uygulama adımızı yazın.Ardından indirme ve kurma adımlarını takip edin.</string>
    <string name="sss22">Üyelik almak için ana sayfamızdaki Üye Ol veya Giriş Yap butonlarına tıklayın. Ardından gerekli bilgileri doldurarak üyeliğinizi tamamlayabilirsiniz.</string>
    <string name="sss33">Şifrenizi unuttuysanız, giriş sayfasında bulunan Şifremi Unuttum seçeneğine tıklayın. E-posta adresinizi girerek şifrenizi sıfırlamanız için size bir bağlantı göndereceğiz.</string>
    <string name="sss44">Uygulamamızda kredi kartı, banka kartı ve diğer popüler ödeme yöntemlerini kullanabilirsiniz. Güvenli ödeme sistemimiz sayesinde alışverişlerinizi kolayca tamamlayabilirsiniz.</string>
    <string name="sss55">Eğer uygulamamızla ilgili teknik bir sorunla karşılaşıyorsanız, lütfen bize hemen bildirin. Müşteri hizmetleri ekibimiz sorununuzu çözmek için size yardımcı olacaktır.</string>
    <string name="sss66">Eğer uygulamamızla ilgili teknik bir sorunla karşılaşıyorsanız, lütfen bize hemen bildirin. Müşteri hizmetleri ekibimiz sorununuzu çözmek için size yardımcı olacaktır.</string>
    <string name="h1"> My Health Asisstant</string>
    <string name="h2"> Neler Sunuyoruz?</string>
    <string name="h3"> Neden Bizi Tercih Etmelisiniz?</string>
    <string name="h11"> My Health Asisstant, sağlık, motivasyon,
 egzersiz ve eğitim gibi farklı alanlarda
 kullanıcılarına kapsamlı bir deneyim sunan
  bir mobil uygulamadır. Kullanıcıların sağlıklı
  yaşam tarzı hedeflerine ulaşmalarına yardımcı
   olmak için tasarlanmıştır.</string>
    <string name="h22"> Sağlık kategorisinde, kullanıcılarımıza sağlıklı
 yaşam tarzıyla ilgili bilgiler, beslenme önerileri
  ve sağlık ipuçları sunuyoruz. Motivasyon kategorisinde
  , günlük hayatlarını iyileştirmek için ilham veren
  içerikler, motivasyon takvimi ve hayatı kolaylaştıran
   ipuçları bulabilirsiniz.
Egzersiz kategorisinde, her yaş ve seviyeye uygun
 egzersiz programları, video dersleri ve hareketli
 egzersizlerle kullanıcılarımızın aktif kalmasına yardımcı
  oluyoruz. Eğitim kategorisinde, farklı alanlardaki
   uzmanlar tarafından hazırlanmış video podcast
    ve e-kitaplarla kişisel gelişimlerine katkı sağlıyoruz.</string>
    <string name="h33"> My Health Asisstant, kullanıcılarına
        zengin içerik ve kullanıcı dostu arayüzüyle kolay
        kullanım sunar. Uzmanlar tarafından hazırlanan
        içerikler ve özelleştirilmiş programlarla,
        her kullanıcının ihtiyaçlarına uygun çözümler sunarız.
        Sağlık, mutluluk ve başarı dolu bir yaşam için bizi tercih edin!</string>
    <string name="g2">Toplanan Bilgiler</string>
    <string name="g3">Bilgi Kullanımı</string>
    <string name="g4">Bilgi Paylaşımı</string>
    <string name="g5">Veri Güvenliği</string>
    <string name="g6">Çocukların Gizliliği</string>
    <string name="g7">Değişiklikler</string>
    <string name="g11"> Bu gizlilik ve güvenlik politikası,
        sağlık verilerinizi nasıl topladığımızı, kullandığımızı,
        paylaştığımızı ve koruduğumuzu açıklar.
        Lütfen bu politikayı dikkatlice okuyun ve uygulamamızı
        kullanırken sağlık verilerinizin nasıl işlendiğini anlayın.</string>
    <string name="g22">Uygulamamız, kullanıcılarımızın sağlık
        durumuyla ilgili çeşitli bilgileri toplayabilir.
        Bu bilgiler, kullanıcının sağlık durumunu izlemek, analiz etmek
        ve sağlık hizmetlerini iyileştirmek amacıyla kullanılır.</string>
    <string name="g33">Topladığımız sağlık bilgileri, kullanıcılara
        daha iyi sağlık hizmetleri sunmak, sağlık alışkanlıklarını
        izlemek için kullanılır. Bu bilgiler ayrıca anonimleştirilerek
        genel eğilimleri analiz etmek, araştırma yapmak ve ürünlerimizi
        geliştirmek için kullanılabilir.</string>
    <string name="g44">Sağlık bilgileriniz, üçüncü taraflarla
        paylaşılmaz veya satılmaz. Ancak, kullanıcılarımızın
        sağlık durumlarını izlemek ve iyileştirmek için işbirliği
        yaptığımız sağlık profesyonelleri veya sağlık kuruluşlarıyla
        bilgi paylaşılabilir. Ayrıca, yasal gereksinimler veya mahkeme
        kararları doğrultusunda sağlık bilgileri yetkilendirilmiş mercilere açıklanabilir.</string>
    <string name="g55">Sağlık bilgileriniz, en yüksek güvenlik standartlarına
        uygun olarak korunur. Ayrıca, veri erişimini ve izini sınırlamak için gelişmiş kimlik
        doğrulama ve erişim kontrolü önlemleri alınmıştır.</string>
    <string name="g66">Uygulamamız, 13 yaşın altındaki çocukların kişisel
        bilgilerini bilerek toplamamaktadır. Ebeveynlerin çocuklarının sağlık
        bilgilerini kontrol etmeleri ve yönetmeleri önemlidir.</string>
    <string name="g77">Bu gizlilik ve güvenlik politikası, zaman zaman güncellenebilir.
    Herhangi bir güncelleme durumunda, bu sayfada güncellenmiş politikanın bir sürümü yayınlanacaktır.</string>
    <string name="pose1">    Step 1:- Start in the push-up position with your arms completely straight and directly beneath your shoulders.\n\n
                             Step 2:- Your body should form a straight line from your shoulders to your ankles. \n\n
                             Step 3:- Squeeze your abs, lift one foot off the floor and bring your knee up towards your chest while keeping your body in as straight of a line as possible. \n\n
                             Step 4:- Return to the starting position and repeat the movement with your opposite leg.. </string>
    <string name="pose2">    Step 1:- Lie flat on your mat with knees bent and feet on the mat. Hands at the base ofyour head and elbows pointed out. Using your abdominals bring your head and shoulders off the mat and come up into a crunch, then lower with control. </string>
    <string name="pose3">    Step 1:- This movement is performed with a bench and a foot stool.\n\n
                             Step 2:- Place a bench behind yourself and rest on it with your hands. Place your legs straight out in front of you. You may also place them at an elevated level as shown above.\n\n
                             Step 3:- Begin with arms in a fully. Slowly bend at your elbows keeping the rest of your body straight. Be sure to keep your elbows back and close together.\n\n
                             Step 4:- Dip down until your arms form a 90 degree angle and you feel a stretch in the triceps.\n\n
                             Step 5:- Slowly extend your arms raising your body back up. Pause and contract your triceps muscles at the top. Pause and repeat the movement.</string>
    <string name="pose4">    Step 1:- Lie flat on the floor with your lower back pressed to the ground (pull your navel in to also target your deep abs). \n\n
                             Step 2:- Put your hands behind your head, then bring your knees in towards your Chest and lift your shoulder blades off the ground, but be sure not to pull on your neck.\n\n
                             Step 3:-Straighten your right leg out to about a 4S-degree angle to the ground while turning your upper body to the left, bringing your right elbow towards the left knee.\n\n
                             Step 4:- Make sure your rib cage is moving and hotjust your elbows. Now switch sides and do the same motion on the other side to complete onerep. </string>
    <string name="pose5">   Step 1:- Lay down with your hands to your sides for support. \n\n
                             Step 2:- Raise your legs so they are off the ground, keeping the abdominals tight.\n\n
                             Step 3:- Slowly raise your legs 90 degrees, contracting the abdominal muscles. Slowly return to starting position. Do not touch the floor with your feet.\n\n
                            </string>
    <string name="pose6">    Step 1:- Lie on your back on an exercise mat. With your arms straight at your sides, bend your knees and place your feet flat on the floor between18 and 24 inches apart.\n\n
                             Step 2:- Breathing out, crunch your ab slightly upward and sideways to the right a couple of inches until your right hand touches your right heel.\n\n
                             Step 3:- Hold brief|y and then return to your starting position while inhaling. Repeat on the left side. </string>
    <string name="pose7">    Step 1:- You can perform straight-leg crunches by lying face up on the floor with your legs straight and then moving your upper body as you would for a standard bent-knee crunch.\n\n
                             Step 2:- Alternatively, lie on your back, raise your legs so they are perpendicular to the floor and then perform the standard crunching motion with your torso.
                             </string>
</resources>